# rusty-telegram-bot

./: Cargo.toml
src/: main.rs
src/gigachat/: client.rs  types.rs
src/telegram/: client.rs  mod.rs  types.rs
