[package]
name = "botochad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = { version = "1.0.113", features = [] }
serde = { version = "1.0.196", features = ["derive"] }
async-stream = "0.3.5"
futures-core = "0.3.30"
futures-util = "0.3.30"
uuid = { version = "1.7.0", features = ["v4"] }
